/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-26 11:52:02
 */

syntax = "proto3";

import "pkg/rpc/proto/p2p_chat/online.proto";
import "pkg/rpc/proto/p2p_chat/offline.proto";
import "pkg/rpc/proto/p2p_chat/inputting.proto";
import "pkg/rpc/proto/p2p_chat/input_stop.proto";
import "pkg/rpc/proto/p2p_chat/chat_delivered.proto";
import "pkg/rpc/proto/p2p_chat/chat_read.proto";
import "pkg/rpc/proto/p2p_chat/chat_reject.proto";
import "pkg/rpc/proto/p2p_chat/chat_withdraw.proto";
import "pkg/rpc/proto/p2p_chat/friend_request.proto";
import "pkg/rpc/proto/p2p_chat/friend_reply.proto";

package pkg.rpc.proto.p2p_chat;
option go_package = "pkg/rpc/proto/p2p_chat";

// 订阅请求
message SubscribeRequest {
}

// 订阅回复
message SubscribeReply {
  string userId = 1; // 用户 id

  oneof Type {
    Online online = 10; // 上线
    Offline offline = 11; // 下线

    Inputting inputting = 4; // 输入中
    InputStop inputStop = 5; // 输入停止

    ChatDelivered chatDelivered = 6; // 消息已送达
    ChatRead chatRead = 7; // 消息已读
    ChatReject chatReject = 8; // 消息拒绝
    ChatWithdraw chatWithdraw = 9; // 消息撤回

    FriendRequest friendRequest = 2; // 好友请求
    FriendReply friendReply = 3; // 好友回复
  }
}

// 点对点聊天
service P2pChat {
  // 订阅
  rpc Subscribe(SubscribeRequest) returns(stream SubscribeReply);
}